<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".Activities.SignInActivity">

    <include
        android:id="@+id/include"
        layout="@layout/toolbarsignin" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="#2B2B2B"
            android:padding="1dp"
            android:textColor="@color/red"
            android:textColorHint="#BDB5B5"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.294"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/email"
                android:padding="10dp"
                android:textColor="#EC0D0D"
                android:textColorHint="@color/white"

                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="61dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="150dp"
            android:layout_marginEnd="32dp"
            android:background="#2B2B2B"
            android:padding="1dp"
            android:textColorHint="#BDB5B5"
            app:boxBackgroundMode="filled"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.232"
            app:passwordToggleEnabled="true"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/red"
                android:textColorHint="#fff"

                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signinButton"
            android:layout_width="317dp"
            android:layout_height="0dp"
            android:layout_margin="25dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/button_stroke"
            android:text="@string/sign_in"
            android:textColor="#FFFEFE"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/passwordLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/passwordLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordLayout" />

        <TextView
            android:id="@+id/forgotpasswordtextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/forgot_password"
            android:textColor="#A8A6A6"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/signinButton"
            app:layout_constraintStart_toStartOf="@+id/signinButton"
            app:layout_constraintTop_toBottomOf="@+id/signinButton"


            />

        <TextView
            android:id="@+id/newRegistertextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/new_to_netflix"
            android:textColor="#A8A6A6"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/forgotpasswordtextview"
            app:layout_constraintStart_toStartOf="@+id/forgotpasswordtextview"
            app:layout_constraintTop_toBottomOf="@+id/forgotpasswordtextview"


            />

        <ProgressBar
            android:id="@+id/progressbarSignin"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:theme="@style/AppTheme.Custom"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/newRegistertextview"
            app:layout_constraintStart_toStartOf="@id/newRegistertextview"
            app:layout_constraintTop_toBottomOf="@+id/newRegistertextview"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="InvalidId,MissingConstraints"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>